feat: Add game settings and icon
Introduces new game settings to the application, including volume controls, difficulty, and grid visibility. Also adds a favicon to improve the browser tab experience.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cavanon: Infinite Grid RPG</title>
+    <link rel="icon" type="image/png" href="/icon.png" />
     <!-- Using Tailwind CDN for simplicity in this specific migration. 
          For a production app, you might consider installing tailwindcss as a devDependency. -->
     <script src="https://cdn.tailwindcss.com"></script>
